fix header / justify-content: "space-between" and gap for links

--- a/style.css
+++ b/style.css
@@ -24,3 +24,26 @@ body{
     background-color: #E5E7EB;
 }
 
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ul{
+    list-style-type: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    gap: 12px;
+}
+
+a{
+    text-decoration: none;
+    color: #E5E7EB;
+}
+
+.right-link{
+
+}
+
